--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "rxjs": "~6.6.0",
+    "three": "^0.126.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
