start quiz part, write api demo

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~11.1.2",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "express": "^4.17.1",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "three": "^0.126.1",
     "tslib": "^2.0.0",
